deploy: 46041ff8d0e34a36e40d5dda83c51af40bcc0592

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f317a749",
+   "id": "b845cef1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12ce47d",
+   "id": "93c51ecc",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b1c6b7",
+   "id": "4941cca6",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca60ec91",
+   "id": "2d4fbe0f",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca682f37",
+   "id": "16ed0222",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c2edcb",
+   "id": "5008f52e",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "afbfee4b",
+   "id": "b768e88d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:51.525753Z",
-     "iopub.status.busy": "2025-02-03T15:40:51.525565Z",
-     "iopub.status.idle": "2025-02-03T15:40:54.891635Z",
-     "shell.execute_reply": "2025-02-03T15:40:54.891024Z"
+     "iopub.execute_input": "2025-02-04T09:38:28.071652Z",
+     "iopub.status.busy": "2025-02-04T09:38:28.071206Z",
+     "iopub.status.idle": "2025-02-04T09:38:31.529197Z",
+     "shell.execute_reply": "2025-02-04T09:38:31.528532Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80aceac9",
+   "id": "d56733b5",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12f627a5",
+   "id": "b406b28b",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d72919",
+   "id": "0afbe4e2",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd3736ca",
+   "id": "8199c061",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5878ac",
+   "id": "6f892ef1",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02dcdcc4",
+   "id": "f76319d8",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ba4091",
+   "id": "62860701",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb410c17",
+   "id": "a6f15236",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f4df06e6",
+   "id": "4456bcd9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:54.894203Z",
-     "iopub.status.busy": "2025-02-03T15:40:54.893681Z",
-     "iopub.status.idle": "2025-02-03T15:40:57.163213Z",
-     "shell.execute_reply": "2025-02-03T15:40:57.162619Z"
+     "iopub.execute_input": "2025-02-04T09:38:31.531834Z",
+     "iopub.status.busy": "2025-02-04T09:38:31.531324Z",
+     "iopub.status.idle": "2025-02-04T09:38:33.775926Z",
+     "shell.execute_reply": "2025-02-04T09:38:33.775264Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9bd1e5",
+   "id": "6d6a7835",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8fb6e51f",
+   "id": "92d8d88c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:57.165177Z",
-     "iopub.status.busy": "2025-02-03T15:40:57.164975Z",
-     "iopub.status.idle": "2025-02-03T15:40:57.168790Z",
-     "shell.execute_reply": "2025-02-03T15:40:57.168307Z"
+     "iopub.execute_input": "2025-02-04T09:38:33.778111Z",
+     "iopub.status.busy": "2025-02-04T09:38:33.777690Z",
+     "iopub.status.idle": "2025-02-04T09:38:33.781178Z",
+     "shell.execute_reply": "2025-02-04T09:38:33.780488Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8e78d1",
+   "id": "27e40821",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d68eee0f",
+   "id": "0d49c3c5",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0662c738",
+   "id": "59c8ae69",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b82ba42",
+   "id": "73cc7638",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0ea316f",
+   "id": "1d537e22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:57.170969Z",
-     "iopub.status.busy": "2025-02-03T15:40:57.170521Z",
-     "iopub.status.idle": "2025-02-03T15:40:57.218855Z",
-     "shell.execute_reply": "2025-02-03T15:40:57.218239Z"
+     "iopub.execute_input": "2025-02-04T09:38:33.783128Z",
+     "iopub.status.busy": "2025-02-04T09:38:33.782747Z",
+     "iopub.status.idle": "2025-02-04T09:38:33.831955Z",
+     "shell.execute_reply": "2025-02-04T09:38:33.831338Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57b90be",
+   "id": "1cee3cdf",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ab4bda4",
+   "id": "516434d1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:57.220861Z",
-     "iopub.status.busy": "2025-02-03T15:40:57.220506Z",
-     "iopub.status.idle": "2025-02-03T15:40:57.296487Z",
-     "shell.execute_reply": "2025-02-03T15:40:57.295962Z"
+     "iopub.execute_input": "2025-02-04T09:38:33.833969Z",
+     "iopub.status.busy": "2025-02-04T09:38:33.833753Z",
+     "iopub.status.idle": "2025-02-04T09:38:33.908287Z",
+     "shell.execute_reply": "2025-02-04T09:38:33.907645Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b4c830",
+   "id": "2da5b4a8",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bea13ea",
+   "id": "9a38f39c",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cf769aa3",
+   "id": "e25aa4b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:57.298713Z",
-     "iopub.status.busy": "2025-02-03T15:40:57.298266Z",
-     "iopub.status.idle": "2025-02-03T15:40:57.329452Z",
-     "shell.execute_reply": "2025-02-03T15:40:57.328877Z"
+     "iopub.execute_input": "2025-02-04T09:38:33.910499Z",
+     "iopub.status.busy": "2025-02-04T09:38:33.910193Z",
+     "iopub.status.idle": "2025-02-04T09:38:33.940113Z",
+     "shell.execute_reply": "2025-02-04T09:38:33.939490Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f475ed",
+   "id": "c1a12082",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56b5e721",
+   "id": "13da729b",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f40ddd",
+   "id": "c92d7308",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4544ba2",
+   "id": "eaef1bd1",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70364b3f",
+   "id": "d0ba0335",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "124714a5",
+   "id": "e31e5766",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:57.331756Z",
-     "iopub.status.busy": "2025-02-03T15:40:57.331381Z",
-     "iopub.status.idle": "2025-02-03T15:40:57.335687Z",
-     "shell.execute_reply": "2025-02-03T15:40:57.335003Z"
+     "iopub.execute_input": "2025-02-04T09:38:33.942184Z",
+     "iopub.status.busy": "2025-02-04T09:38:33.941975Z",
+     "iopub.status.idle": "2025-02-04T09:38:33.946494Z",
+     "shell.execute_reply": "2025-02-04T09:38:33.945939Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce90b27",
+   "id": "c052e361",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "822921e3",
+   "id": "1b24f21c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:57.337600Z",
-     "iopub.status.busy": "2025-02-03T15:40:57.337238Z",
-     "iopub.status.idle": "2025-02-03T15:40:57.340289Z",
-     "shell.execute_reply": "2025-02-03T15:40:57.339796Z"
+     "iopub.execute_input": "2025-02-04T09:38:33.948333Z",
+     "iopub.status.busy": "2025-02-04T09:38:33.948020Z",
+     "iopub.status.idle": "2025-02-04T09:38:33.950977Z",
+     "shell.execute_reply": "2025-02-04T09:38:33.950473Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1775d9",
+   "id": "982398c1",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "89014247",
+   "id": "b2bca689",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:40:57.342135Z",
-     "iopub.status.busy": "2025-02-03T15:40:57.341750Z",
-     "iopub.status.idle": "2025-02-03T15:41:00.065750Z",
-     "shell.execute_reply": "2025-02-03T15:41:00.065087Z"
+     "iopub.execute_input": "2025-02-04T09:38:33.952963Z",
+     "iopub.status.busy": "2025-02-04T09:38:33.952594Z",
+     "iopub.status.idle": "2025-02-04T09:38:36.632334Z",
+     "shell.execute_reply": "2025-02-04T09:38:36.631755Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "388036f7",
+   "id": "f1abe82c",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a828a97",
+   "id": "d1078cc8",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660f0f1c",
+   "id": "7789f202",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9add7c6",
+   "id": "0e2cac04",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd5e6a6b",
+   "id": "bce2f723",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:41:00.067971Z",
-     "iopub.status.busy": "2025-02-03T15:41:00.067573Z",
-     "iopub.status.idle": "2025-02-03T15:41:00.071075Z",
-     "shell.execute_reply": "2025-02-03T15:41:00.070421Z"
+     "iopub.execute_input": "2025-02-04T09:38:36.634734Z",
+     "iopub.status.busy": "2025-02-04T09:38:36.634325Z",
+     "iopub.status.idle": "2025-02-04T09:38:36.638251Z",
+     "shell.execute_reply": "2025-02-04T09:38:36.637732Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f93cfee7e20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f8bd15d3e20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d46e050",
+   "id": "a3223ac7",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "624eb3cd",
+   "id": "ac0502d7",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0d61c6",
+   "id": "5d84988b",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "730e8a23",
+   "id": "b4f8a766",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fd45b3f1",
+   "id": "59dfc68e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:41:00.072950Z",
-     "iopub.status.busy": "2025-02-03T15:41:00.072617Z",
-     "iopub.status.idle": "2025-02-03T15:41:00.075716Z",
-     "shell.execute_reply": "2025-02-03T15:41:00.075247Z"
+     "iopub.execute_input": "2025-02-04T09:38:36.640216Z",
+     "iopub.status.busy": "2025-02-04T09:38:36.639848Z",
+     "iopub.status.idle": "2025-02-04T09:38:36.643000Z",
+     "shell.execute_reply": "2025-02-04T09:38:36.642459Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "acd44b9c",
+   "id": "21c0f30a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:41:00.077429Z",
-     "iopub.status.busy": "2025-02-03T15:41:00.077095Z",
-     "iopub.status.idle": "2025-02-03T15:41:01.148819Z",
-     "shell.execute_reply": "2025-02-03T15:41:01.148246Z"
+     "iopub.execute_input": "2025-02-04T09:38:36.645025Z",
+     "iopub.status.busy": "2025-02-04T09:38:36.644576Z",
+     "iopub.status.idle": "2025-02-04T09:38:37.723635Z",
+     "shell.execute_reply": "2025-02-04T09:38:37.723132Z"
     }
    },
    "outputs": [
